Colaboratory を使用して作成しました

--- a/cpp_functional.ipynb
+++ b/cpp_functional.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "cpp_functional.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOt1GPJIrCO0LXb7OdnTHMv",
+      "authorship_tag": "ABX9TyM/eSEh+xmOScKUDqcuIlTN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -41,14 +41,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "PUckHiKDGLO7"
       },
       "outputs": [],
       "source": [
         "# 最初の例\n",
-        "# 命令型\n",
+        "# 命令型の例\n",
+        "# main のないセルを実行するとエラーになる\n",
+        "# コメントアウトするか %%script false としておく\n",
         "# Listing 1.1 Calculating the number of lines the imperative way\n",
         "%%script false\n",
         "vector<int> count_lines_in_files(const vector<string>& files) {\n",
@@ -156,8 +158,7 @@
       "source": [
         "# とりあえず動いた\n",
         "# \"\\n\" を数えているのでファイル末に改行がないと正しい数字にならない\n",
-        "# getline を使いたい\n",
-        "# テキストはこれを関数型に変えると言うことだがどうするのだろうか"
+        "# getline を使いたい"
       ],
       "metadata": {
         "id": "rYhV-d1WUKho"
@@ -535,9 +536,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "mWkSG6IGp8AF",
-        "outputId": "24c8764c-d981-4c34-e65b-ac7459456519"
+        "outputId": "52429ed7-9775-4727-d061-68a4285e3dd7"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -547,17 +548,6 @@
           ]
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!g++ temp.cpp; ./a.out"
-      ],
-      "metadata": {
-        "id": "rw5NPJ3EqBuV"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "code",
@@ -704,8 +694,7 @@
       "cell_type": "code",
       "source": [
         "# PARALLEL VERSIONS OF STANDARD ALGORITHMS\n",
-        "# reduce , execution が使えないので %%script false\n",
-        "# %%script false\n",
+        "#  -std=c++17 にしても reduce , execution が使えないので %%script false\n",
         "%%writefile temp.cpp\n",
         "# include <bits/stdc++.h>\n",
         "using namespace std;\n",
@@ -723,12 +712,12 @@
       ],
       "metadata": {
         "id": "Rg4paNk08MuC",
-        "outputId": "0002998b-685e-43b1-d554-de261ee7a596",
+        "outputId": "6a25af29-cb8e-410b-c773-2b0a07f1d372",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
@@ -742,115 +731,26 @@
     {
       "cell_type": "code",
       "source": [
-        ""
-      ],
-      "metadata": {
-        "id": "nu8BxWla8-fc",
-        "outputId": "7ab0bd98-7454-4b0d-eae8-84e88181b380",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "#define __cplusplus 201402L\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        ""
-      ],
-      "metadata": {
-        "id": "YID26ppJtME9",
-        "outputId": "6b33f6d6-f41d-4193-918e-ab79dd75bee3",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Reading package lists... Done\n",
-            "Building dependency tree       \n",
-            "Reading state information... Done\n",
-            "g++-7 is already the newest version (7.5.0-3ubuntu1~18.04).\n",
-            "g++-7 set to manually installed.\n",
-            "The following packages were automatically installed and are no longer required:\n",
-            "  libnvidia-common-460 nsight-compute-2020.2.0\n",
-            "Use 'sudo apt autoremove' to remove them.\n",
-            "0 upgraded, 0 newly installed, 0 to remove and 42 not upgraded.\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        ""
-      ],
-      "metadata": {
-        "id": "Rtw_NK8K8-WF",
-        "outputId": "91927fc3-5db9-4b75-ba17-81936b9a6171",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "g++-7 (Ubuntu 7.5.0-3ubuntu1~18.04) 7.5.0\n",
-            "Copyright (C) 2017 Free Software Foundation, Inc.\n",
-            "This is free software; see the source for copying conditions.  There is NO\n",
-            "warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.\n",
-            "\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        ""
-      ],
-      "metadata": {
-        "id": "4TtCFgIU8Mi5"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
+        "# c++17 の any は -std=c++17 して include  すれば使える\n",
+        "# reduce や execution は同じようにしてもエラーになる\n",
         "%%writefile temp.cpp\n",
         "# include <bits/stdc++.h>\n",
         "# include <any>\n",
         "using namespace std;\n",
+        "\n",
         "int main(){\n",
-        "    auto s = std::any(123);\n",
-        "    std::cout << std::any_cast<int>(s) << std::endl; // \"123\"が標準出力\n",
+        "    auto s = any(123);\n",
+        "    cout << any_cast<int>(s) << endl; // \"123\"が標準出力\n",
         "}"
       ],
       "metadata": {
         "id": "LczxuXpPtq8G",
-        "outputId": "d58919ad-d789-480e-d91a-b3a15e962151",
+        "outputId": "8cde5b25-722a-44fc-b965-611ec3c51780",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 27,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "stream",
@@ -868,12 +768,12 @@
       ],
       "metadata": {
         "id": "JA3_zUWuBHkH",
-        "outputId": "619071e7-0d80-49aa-d498-f488052eabcb",
+        "outputId": "9ec45eff-66c7-4e95-98f9-12c9610991e1",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 28,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "stream",
@@ -890,34 +790,7 @@
         ""
       ],
       "metadata": {
-        "id": "O9GNpbiWtqz6",
-        "outputId": "7cca4e21-2029-4435-f4dc-d0499b6edaa3",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "g++-7 (Ubuntu 7.5.0-3ubuntu1~18.04) 7.5.0\n",
-            "Copyright (C) 2017 Free Software Foundation, Inc.\n",
-            "This is free software; see the source for copying conditions.  There is NO\n",
-            "warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.\n",
-            "\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        ""
-      ],
-      "metadata": {
-        "id": "sxDuHdGHBf1r"
+        "id": "Vj39uofIEaL3"
       },
       "execution_count": null,
       "outputs": []
@@ -925,7 +798,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        ""
+        "# いまここ"
       ],
       "metadata": {
         "id": "1YF4qemSUd5Z"
