Colaboratory を使用して作成しました

--- a/cpp_apg4b.ipynb
+++ b/cpp_apg4b.ipynb
@@ -6,7 +6,7 @@
       "name": "cpp_apg4b.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPAZGWdw0ialXsMsUSRSBcC",
+      "authorship_tag": "ABX9TyPN0v8qIp/9n8m+rgkaTKtL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -16169,7 +16169,7 @@
         "# ビット演算の演算子は優先順位を間違えやすいため、明示的に()でくくるようにする\n",
         "\n",
         "# ビット演算\n",
-        "# 初めにビット演算の概念について説明し、その後にC++でビット演算を行う方法を紹介します。\n",
+        "# 初めにビット演算の概念について説明し、その後にC++でビット演算を行う方法を紹介します\n",
         "\n",
         "# ビット\n",
         "# 「0」か「1」の2通りの状態を表現することができるデータの単位をビットといいます。\n",
@@ -17044,15 +17044,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "wEUMEe69i5at",
-        "outputId": "9138f480-8860-44e4-9323-980f244e53d6"
+        "outputId": "ebef148f-2ee8-4696-e6d3-21db9bc0ab18"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Writing temp.cpp\n"
+            "Overwriting temp.cpp\n"
           ]
         }
       ]
@@ -17067,15 +17067,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "hAggQIyQjVeZ",
-        "outputId": "c651a6e4-85ad-4a9d-db7b-e2648f88abf3"
+        "outputId": "11d83a2d-8cca-4be6-9a59-2625eab0e970"
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "no\n"
+            "no\n",
+            "15\n"
           ]
         }
       ]
@@ -17237,17 +17238,71 @@
     {
       "cell_type": "code",
       "source": [
+        "# 実験 to_string \n",
+        "%%writefile temp.cpp\n",
+        "#include <bits/stdc++.h>\n",
+        "using namespace std;\n",
+        " \n",
+        "int main() {\n",
+        "  bitset<4> x(\"1010\");\n",
+        "  cout << x.to_string() << endl;\n",
+        "  cout << x << endl;\n",
+        "  cout << (int)(x.to_ullong()) << endl;\n",
+        "}"
+      ],
+      "metadata": {
+        "id": "Yx0WeXNhEzOW",
+        "outputId": "6b10c3b1-f29c-489e-eb9b-9b8d2a138534",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!g++ temp.cpp; ./a.out"
+      ],
+      "metadata": {
+        "id": "3dDYV0FlFOdP",
+        "outputId": "c0604f76-98c7-4d4e-de7b-9522c1624c42",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1010\n",
+            "1010\n",
+            "10\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# ビット全探索\n",
         "# 「ビット全探索」と呼ばれるテクニックを紹介します。\n",
         "\n",
         "# ビット全探索によって、組合せの全列挙をシンプルに実装することができます。\n",
-        "\n",
         "# ビット全探索とは「すべてのビット列の組合せ」に対して何らかの処理を行うことをいいます。\n",
-        "\n",
         "# 例えば、長さ2のビット列ならば、すべてのビット列の組合せは「00」「01」「10」「11」の4通りです。\n",
-        "\n",
         "# 各ビットについて0か1の2通りなので長さ N のビット列は 2^N 通り存在します。\n",
-        "\n",
         "# 次のサンプルプログラムでは、すべての「長さ3のビット列」を列挙しています。\n",
         "\n",
         "# サンプルプログラム\n",
@@ -17265,22 +17320,10 @@
         "}"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "5xpXXrjzk6p2",
-        "outputId": "f7bf1803-aac0-46b4-8c6b-b696dd6dc296"
+        "id": "5xpXXrjzk6p2"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Writing temp.cpp\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -17292,9 +17335,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "IsmmEXL2RJHt",
-        "outputId": "8edd4463-cde3-48e7-c79a-250384b8c9df"
+        "outputId": "0fd05755-cfac-4adb-e7b8-e2faebf07163"
       },
-      "execution_count": null,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
@@ -17387,7 +17430,7 @@
         "# ループになるので計算量に注意しましょう。\n",
         "\n",
         "# 例題\n",
-        "# A^1,A^2,⋯A^N のN個の整数が与えられます。 これらの整数からいくつかを選んで、\n",
+        "# A^1,A^2,⋯,A^N のN個の整数が与えられます。 これらの整数からいくつかを選んで、\n",
         "# その総和がKとなるような選び方が存在するかを求めてください。\n",
         "# 総和がKとなるような整数の組合せが存在するなら1行にYESを、そうでなければNOを出力してください。\n"
       ],
@@ -17482,6 +17525,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# いまこｋ"
+      ],
+      "metadata": {
+        "id": "t0sT4f-jLqps"
+      }
     },
     {
       "cell_type": "code",
