--- a/cpp_bit.ipynb
+++ b/cpp_bit.ipynb
@@ -6,7 +6,7 @@
       "name": "cpp_bit.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMjbovi/CENcomVrCtEuCGm",
+      "authorship_tag": "ABX9TyP0a3B5XaoxV/bTNQqNXbY5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -53,20 +53,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 13,
       "metadata": {
         "id": "nqUI4aRF7_jw",
-        "outputId": "d8aa8e1b-3cd7-4fb7-814d-f6c45e6aa491",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "6e5084c4-c0ea-4c64-85f0-d7e366d47058"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Writing temp.cpp\n"
+            "Overwriting temp.cpp\n"
           ]
         }
       ],
@@ -80,6 +80,10 @@
         "    int a = 45; // 実際上は 0b101101、あるいは 0x2d と書く\n",
         "    int b = 25;\n",
         "    cout << a << \" AND \" << b << \" = \" << (a&b) << endl;\n",
+        "    bitset<8> c(45);\n",
+        "    bitset<8> d(25);\n",
+        "    cout << c << \" AND \" << d << \" = \" << (c&d) << endl;\n",
+        "    cout << (bitset<8>)a <<  \" AND \" << (bitset<8>)b << \" = \" <<  (bitset<8>)(a&b) << endl;\n",
         "}"
       ]
     },
@@ -89,19 +93,21 @@
         "!g++ temp.cpp; ./a.out"
       ],
       "metadata": {
-        "id": "glg2AnO496JC",
-        "outputId": "a88c2c90-b6ed-4e1a-cfb8-d4dd4273c9ec",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "glg2AnO496JC",
+        "outputId": "22202e45-5835-45c1-9658-92a5352ea525"
       },
-      "execution_count": 2,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "45 AND 25 = 9\n"
+            "45 AND 25 = 9\n",
+            "00101101 AND 00011001 = 00001001\n",
+            "00101101 AND 00011001 = 00001001\n"
           ]
         }
       ]
@@ -110,21 +116,6 @@
       "cell_type": "code",
       "source": [
         "\n",
-        "!g++ temp.cpp; ./a.out\n",
-        "!g++ temp.cpp; echo  |./a.out\n",
-        "\n",
-        "45 AND 25 = 9\n",
-        "OR\n",
-        "OR は二進法表記したときに各桁ごとに OR をとったものになります。\n",
-        "\n",
-        "45 = 0b101101\n",
-        "25 = 0b011001\n",
-        "\n",
-        "より\n",
-        "\n",
-        "45 OR 25 = 0b111101 = 61\n",
-        "\n",
-        "になります。\n",
         "\n",
         "#include <iostream>\n",
         "using namespace std;\n",
