--- a/cpp_bit.ipynb
+++ b/cpp_bit.ipynb
@@ -6,7 +6,7 @@
       "name": "cpp_bit.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyP0a3B5XaoxV/bTNQqNXbY5",
+      "authorship_tag": "ABX9TyOSpwzAUw6r9F/F8S6/4RIq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -53,7 +53,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "id": "nqUI4aRF7_jw",
         "colab": {
@@ -99,7 +99,7 @@
         "id": "glg2AnO496JC",
         "outputId": "22202e45-5835-45c1-9658-92a5352ea525"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -115,17 +115,67 @@
     {
       "cell_type": "code",
       "source": [
-        "\n",
-        "\n",
-        "#include <iostream>\n",
+        "# 45 OR 25 = 61\n",
+        "%%writefile temp.cpp\n",
+        "#include <bits/stdc++.h>\n",
         "using namespace std;\n",
         "int main() {\n",
         "    int a = 45; // 実際上は 0b101101、あるいは 0x2d と書く\n",
         "    int b = 25;\n",
         "    cout << a << \" OR \" << b << \" = \" << (a|b) << endl;\n",
-        "}\n",
+        "    cout << (bitset<8>)a << \" OR \" << (bitset<8>)b << \" = \" << (bitset<8>)(a|b) << endl;\n",
+        "}"
+      ],
+      "metadata": {
+        "id": "veEyBbNe9yE8",
+        "outputId": "e2ee1346-183c-4587-d07e-f558a214c556",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!g++ temp.cpp; ./a.out"
+      ],
+      "metadata": {
+        "id": "wLlrpb3tP46j",
+        "outputId": "b89bd08d-b160-48fa-fc44-c4c48339b1c3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "45 OR 25 = 61\n",
+            "00101101 OR 00011001 = 00111101\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
         "45 OR 25 = 61\n",
-        "他に、NOT, NAND, NOR, XOR といったものがありますがそれらの詳細は以下の資料を読んでいただければと思います。本記事ではタイトルに C++ とつけましたが、ビット演算そのものについてはどの言語でも大差ないです。\n",
+        "他に、NOT, NAND, NOR, XOR といったものがありますがそれらの詳\n",
+        "細は以下の資料を読んでいただければと思います。本記事ではタイトルに C++ と\n",
+        "つけましたが、ビット演算そのものについてはどの言語でも大差ないです。\n",
         "\n",
         "Python ビット演算 超入門\n",
         "すばらしいビット\n",
@@ -1189,7 +1239,7 @@
         "1"
       ],
       "metadata": {
-        "id": "veEyBbNe9yE8"
+        "id": "fGyR31NXP1uV"
       },
       "execution_count": null,
       "outputs": []
