--- a/cpp_apg4b.ipynb
+++ b/cpp_apg4b.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "cpp_apg4b.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPN0v8qIp/9n8m+rgkaTKtL",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyNeZ6g6LzfjQG0gASxBWzDM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -17246,17 +17247,17 @@
         "  bitset<4> x(\"1010\");\n",
         "  cout << x.to_string() << endl;\n",
         "  cout << x << endl;\n",
-        "  cout << (int)(x.to_ullong()) << endl;\n",
+        "  cout << x.to_ullong() << endl;\n",
         "}"
       ],
       "metadata": {
         "id": "Yx0WeXNhEzOW",
-        "outputId": "6b10c3b1-f29c-489e-eb9b-9b8d2a138534",
+        "outputId": "b8f2a6e9-05a6-4d57-8949-bec7cb29ab98",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -17274,12 +17275,12 @@
       ],
       "metadata": {
         "id": "3dDYV0FlFOdP",
-        "outputId": "c0604f76-98c7-4d4e-de7b-9522c1624c42",
+        "outputId": "713a7345-89ab-4f73-84cc-f1550dc20de0",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -17313,7 +17314,6 @@
         "  // 3ビットのビット列をすべて列挙する\n",
         "  for (int tmp = 0; tmp < (1 << 3); tmp++) {\n",
         "    bitset<3> s(tmp);\n",
-        "    // ビット列を出力\n",
         "    cout << s << endl;\n",
         "  }\n",
         "}"
@@ -17425,13 +17425,13 @@
         "\n",
         "# bitsetの長さの指定に変数は使えないことに注意してください。\n",
         "\n",
-        "# また、このアルゴリズムはビット列の長さをNとして、少なくとも 2^N 回以上の\n",
+        "# また、このアルゴリズムはビット列の長さを N として、少なくとも 2^N 回以上の\n",
         "# ループになるので計算量に注意しましょう。\n",
         "\n",
         "# 例題\n",
         "# A^1,A^2,⋯,A^N のN個の整数が与えられます。 これらの整数からいくつかを選んで、\n",
         "# その総和がKとなるような選び方が存在するかを求めてください。\n",
-        "# 総和がKとなるような整数の組合せが存在するなら1行にYESを、そうでなければNOを出力してください。\n"
+        "# 総和がKとなるような整数の組合せが存在するなら1行に YES を、そうでなければ NO を出力してください。\n"
       ],
       "metadata": {
         "id": "kbUp7ArWRiFF"
@@ -17524,15 +17524,6 @@
           ]
         }
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "# いまこｋ"
-      ],
-      "metadata": {
-        "id": "t0sT4f-jLqps"
-      }
     },
     {
       "cell_type": "code",
@@ -17675,7 +17666,7 @@
         "id": "KL6Opnx8gS9C",
         "outputId": "e1e74b39-2249-46b8-8c32-3d89bb19825b"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -17730,6 +17721,15 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# いまここ"
+      ],
+      "metadata": {
+        "id": "eJTipMtIu7M7"
+      }
     },
     {
       "cell_type": "code",
