Colaboratory を使用して作成しました

--- a/cpp_bit.ipynb
+++ b/cpp_bit.ipynb
@@ -6,7 +6,7 @@
       "name": "cpp_bit.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyM3mjvzoZo1aBEC3UAhQ+hL",
+      "authorship_tag": "ABX9TyNkM8LMjyyGe3iP9lWdTUBl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -53,7 +53,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "id": "nqUI4aRF7_jw",
         "colab": {
@@ -99,7 +99,7 @@
         "id": "glg2AnO496JC",
         "outputId": "22202e45-5835-45c1-9658-92a5352ea525"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -133,7 +133,7 @@
         "id": "veEyBbNe9yE8",
         "outputId": "397e7e1d-4a99-4d50-8854-f02eb2883d8f"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -156,7 +156,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -176,31 +176,121 @@
         "# a 番目のフラグが立っている状態は (1<<a) と表せます。\n",
         "#さらに、a 番目と b 番目と c 番目のフラグが立っている状態は (1<<a) | (1<<b) | (1<<c) と表せます。\n",
         "# これを用いて以下のようなフラグ管理ができます！\n",
-        "\n",
-        "やりたいこと\t実装\n",
-        "ビット bit に i 番目のフラグが立っているかどうか\tif (bit & (1<<i))\n",
-        "ビット bit に i 番目のフラグが消えているかどうか\tif (!(bit & (1<<i)))\n",
-        "ビット bit に i 番目のフラグを立てる\tbit｜= (1<<i)\n",
-        "ビット bit に i 番目のフラグを消す\tbit &= ~(1<<i)\n",
-        "ビット bit に何個のフラグが立っているか\t__builtin_popcount(bit)\n",
-        "ビット bit に i 番目のフラグを立てたもの\tbit｜(1<<i)\n",
-        "ビット bit に i 番目のフラグを消したもの\tbit & ~(1<<i)\n",
-        "なお、それぞれ他の表現方法も色々考えられます。例えばビット bit に i 番目のフラグが立っているかどうかは if ((bit>>i) & 1) と書くこともできます。また、bit｜(1<<i) といった書き方をしましたが、(1<<i) のようなものは以下のように予め define してしまうことも多いです (const unsigned int を使えという意見もあります)。\n",
-        "\n",
+        "%%html\n",
+        "<table border=\"1\" style=\"width: 90%\">\n",
+        "<thead>\n",
+        "  <tr>\n",
+        "    <th>やりたいこと</th>\n",
+        "    <th>実装</th>\n",
+        "  </tr>\n",
+        "</thead>\n",
+        "<tbody>\n",
+        "  <tr>\n",
+        "    <td>ビット bit に i 番目のフラグが立っているかどうか</td>\n",
+        "    <td>if (bit &amp; (1&lt;&lt;i))</td>\n",
+        "  </tr>\n",
+        "  <tr>\n",
+        "    <td>ビット bit に i 番目のフラグが消えているかどうか</td>\n",
+        "    <td>if (!(bit &amp; (1&lt;&lt;i)))</td>\n",
+        "  </tr>\n",
+        "  <tr>\n",
+        "    <td>ビット bit に i 番目のフラグを立てる</td>\n",
+        "    <td>bit｜= (1&lt;&lt;i)</td>\n",
+        "  </tr>\n",
+        "  <tr>\n",
+        "    <td>ビット bit に i 番目のフラグを消す</td>\n",
+        "    <td>bit &amp;= ~(1&lt;&lt;i)</td>\n",
+        "  </tr>\n",
+        "  <tr>\n",
+        "    <td>ビット bit に何個のフラグが立っているか</td>\n",
+        "    <td>__builtin_popcount(bit)</td>\n",
+        "  </tr>\n",
+        "  <tr>\n",
+        "    <td>ビット bit に i 番目のフラグを立てたもの</td>\n",
+        "    <td>bit｜(1&lt;&lt;i)</td>\n",
+        "  </tr>\n",
+        "  <tr>\n",
+        "    <td>ビット bit に i 番目のフラグを消したもの</td>\n",
+        "    <td>bit &amp; ~(1&lt;&lt;i)</td>\n",
+        "  </tr>\n",
+        "</tbody>\n",
+        "</table>"
+      ],
+      "metadata": {
+        "id": "jxoIkc7UcsNf",
+        "outputId": "25e1e3e6-7fea-4a62-8fca-0a64b25b2032",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 208
+        }
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "<table border=\"1\" style=\"width: 90%\">\n",
+              "<thead>\n",
+              "  <tr>\n",
+              "    <th>やりたいこと</th>\n",
+              "    <th>実装</th>\n",
+              "  </tr>\n",
+              "</thead>\n",
+              "<tbody>\n",
+              "  <tr>\n",
+              "    <td>ビット bit に i 番目のフラグが立っているかどうか</td>\n",
+              "    <td>if (bit &amp; (1&lt;&lt;i))</td>\n",
+              "  </tr>\n",
+              "  <tr>\n",
+              "    <td>ビット bit に i 番目のフラグが消えているかどうか</td>\n",
+              "    <td>if (!(bit &amp; (1&lt;&lt;i)))</td>\n",
+              "  </tr>\n",
+              "  <tr>\n",
+              "    <td>ビット bit に i 番目のフラグを立てる</td>\n",
+              "    <td>bit｜= (1&lt;&lt;i)</td>\n",
+              "  </tr>\n",
+              "  <tr>\n",
+              "    <td>ビット bit に i 番目のフラグを消す</td>\n",
+              "    <td>bit &amp;= ~(1&lt;&lt;i)</td>\n",
+              "  </tr>\n",
+              "  <tr>\n",
+              "    <td>ビット bit に何個のフラグが立っているか</td>\n",
+              "    <td>__builtin_popcount(bit)</td>\n",
+              "  </tr>\n",
+              "  <tr>\n",
+              "    <td>ビット bit に i 番目のフラグを立てたもの</td>\n",
+              "    <td>bit｜(1&lt;&lt;i)</td>\n",
+              "  </tr>\n",
+              "  <tr>\n",
+              "    <td>ビット bit に i 番目のフラグを消したもの</td>\n",
+              "    <td>bit &amp; ~(1&lt;&lt;i)</td>\n",
+              "  </tr>\n",
+              "</tbody>\n",
+              "</table>"
+            ]
+          },
+          "metadata": {}
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 例えばビット bit に i 番目のフラグが立っているかどうかは if ((bit>>i) & 1) と書くこともできます。\n",
+        "# また、bit｜(1<<i) といった書き方をしましたが、\n",
+        "# (1<<i) のようなものは予め define してしまうことも多いです \n",
         "#define BIT_FLAG_0 (1<<0) // 0000 0000 0000 0001\n",
-        "#define BIT_FLAG_1 (1<<1) // 0000 0000 0000 0010\n",
-        "#define BIT_FLAG_2 (1<<2) // 0000 0000 0000 0100\n",
-        "#define BIT_FLAG_3 (1<<3) // 0000 0000 0000 1000\n",
-        "#define BIT_FLAG_4 (1<<4) // 0000 0000 0001 0000\n",
-        "#define BIT_FLAG_5 (1<<5) // 0000 0000 0010 0000\n",
-        "#define BIT_FLAG_6 (1<<6) // 0000 0000 0100 0000\n",
-        "#define BIT_FLAG_7 (1<<7) // 0000 0000 1000 0000\n",
-        "注意点として表のうち、__builtin_popcount() については GCC のビルトイン関数ですので、GCC で用いる必要があります。\n",
+        "# (const unsigned int を使えという意見もあります)。\n",
+        "# __builtin_popcount() については GCC のビルトイン関数ですので、GCC で用いる必要があります。\n",
         "\n",
-        "以下にフラグ管理の具体的な動作確認を示します (ビットは const unsigned int で表しています):\n",
+        "# 以下にフラグ管理の具体的な動作確認を示します (ビットは const unsigned int で表しています):\n",
         "\n",
-        "#include <iostream>\n",
-        "#include <bitset>\n",
+        "%%writefile temp.cpp\n",
+        "#include <bits/stdc++.h>\n",
         "using namespace std;\n",
         "\n",
         "const unsigned int BIT_FLAG_0 = (1 << 0); // 0000 0000 0000 0001\n",
@@ -243,7 +333,190 @@
         "    cout << \"after : \" << bitset<8>(bit2) << \" (3 excluded)\" << endl;\n",
         "\n",
         "    return 0;\n",
-        "}\n",
+        "}"
+      ],
+      "metadata": {
+        "id": "l69fxWcP0fQq",
+        "outputId": "d18a8517-3599-4f8d-a639-007b2e9315e1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!g++ temp.cpp; ./a.out"
+      ],
+      "metadata": {
+        "id": "INGHppjN1t6F",
+        "outputId": "5c3053fb-a247-496f-a8ae-92e0a77af87f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{1, 3, 5} = 00101010\n",
+            "3 is in     00101010\n",
+            "0 is not in 00101010\n",
+            "00101010 AND 00011001 = 00001000\n",
+            "00101010 OR  00011001 = 00111011\n",
+            "before: 00101010\n",
+            "after : 01101010 (6 included)\n",
+            "before: 00011001\n",
+            "after : 00010001 (3 excluded)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# bitset 関数を使って書き直そう\n",
+        "%%html\n",
+        "<table border=\"1\" style=\"width: 90%\">\n",
+        "<thead>\n",
+        "<tr><th>操作</th><th>書き方</th><th style=\"width: 50%\">備考</th></tr>\n",
+        "</thead>\n",
+        "<tbody>\n",
+        "<tr><td>全てのビットを1にする</td><td>変数.set();</td><td></td></tr>\n",
+        "<tr><td>特定のビットを1にする</td><td>変数.set(1にする位置);</td><td>1にするビットの位置を0始まりのインデックスで指定します。</td></tr>\n",
+        "<tr><td>特定のビットの値を変更する</td><td>変数.set(位置, 値);</td><td>変更するビットの位置を0始まりのインデックスで指定します。値は0か1を指定します。</td></tr>\n",
+        "<tr><td>全てのビットを0にする</td><td>変数.reset();</td><td></td></tr>\n",
+        "<tr><td>特定のビットを0にする</td><td>変数.reset(0にする位置);</td><td>0にするビットの位置を0始まりのインデックスで指定します。</td></tr>\n",
+        "<tr><td>全てのビットを反転する</td><td>変数.flip();</td><td></td></tr>\n",
+        "<tr><td>特定のビットを反転する</td><td>変数.flip(反転する位置);</td><td>反転するビットの位置を0始まりのインデックスで指定します。</td></tr>\n",
+        "<tr><td>特定のビットが1になっているかを調べる</td><td>変数.test(調べる位置);</td><td>調べるビットの位置を0始まりのインデックスで指定します。ビットが1ならtrueを、ビットが0ならfalseを返します。</td></tr>\n",
+        "<tr><td>全てのビットが1になっているかを判定する</td><td>変数.all()</td><td>全てのビットが1ならtrueを、そうでなければfalseを返します。</td></tr>\n",
+        "<tr><td>いずれかのビットが1になっているかを判定する</td><td>変数.any()</td><td>1のビットが存在するならtrueを、そうでなければfalseを返します。</td></tr>\n",
+        "<tr><td>1のビットの個数を数える</td><td>変数.count()</td><td></td></tr>\n",
+        "<tr><td>ビット列を出力する</td><td>cout << 変数;</td><td></td></tr>\n",
+        "<tr><td>ビット列を文字列化する</td><td>変数.to_string()</td><td></td></tr>\n",
+        "<tr><td>ビットに対するアクセス</td><td>変数[位置]</td><td>基本的にはtest、set/resetと同等ですが、範囲外の位置を指定した場合にエラーにならないことに注意する必要があります。</td></tr>\n",
+        "</tbody>\n",
+        "</table>"
+      ],
+      "metadata": {
+        "id": "sNJtOUVf1z6Q",
+        "outputId": "4f4e562c-163e-4648-cee8-8729043c5841",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 493
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "<table border=\"1\" style=\"width: 90%\">\n",
+              "<thead>\n",
+              "<tr><th>操作</th><th>書き方</th><th style=\"width: 50%\">備考</th></tr>\n",
+              "</thead>\n",
+              "<tbody>\n",
+              "<tr><td>全てのビットを1にする</td><td>変数.set();</td><td></td></tr>\n",
+              "<tr><td>特定のビットを1にする</td><td>変数.set(1にする位置);</td><td>1にするビットの位置を0始まりのインデックスで指定します。</td></tr>\n",
+              "<tr><td>特定のビットの値を変更する</td><td>変数.set(位置, 値);</td><td>変更するビットの位置を0始まりのインデックスで指定します。値は0か1を指定します。</td></tr>\n",
+              "<tr><td>全てのビットを0にする</td><td>変数.reset();</td><td></td></tr>\n",
+              "<tr><td>特定のビットを0にする</td><td>変数.reset(0にする位置);</td><td>0にするビットの位置を0始まりのインデックスで指定します。</td></tr>\n",
+              "<tr><td>全てのビットを反転する</td><td>変数.flip();</td><td></td></tr>\n",
+              "<tr><td>特定のビットを反転する</td><td>変数.flip(反転する位置);</td><td>反転するビットの位置を0始まりのインデックスで指定します。</td></tr>\n",
+              "<tr><td>特定のビットが1になっているかを調べる</td><td>変数.test(調べる位置);</td><td>調べるビットの位置を0始まりのインデックスで指定します。ビットが1ならtrueを、ビットが0ならfalseを返します。</td></tr>\n",
+              "<tr><td>全てのビットが1になっているかを判定する</td><td>変数.all()</td><td>全てのビットが1ならtrueを、そうでなければfalseを返します。</td></tr>\n",
+              "<tr><td>いずれかのビットが1になっているかを判定する</td><td>変数.any()</td><td>1のビットが存在するならtrueを、そうでなければfalseを返します。</td></tr>\n",
+              "<tr><td>1のビットの個数を数える</td><td>変数.count()</td><td></td></tr>\n",
+              "<tr><td>ビット列を出力する</td><td>cout << 変数;</td><td></td></tr>\n",
+              "<tr><td>ビット列を文字列化する</td><td>変数.to_string()</td><td></td></tr>\n",
+              "<tr><td>ビットに対するアクセス</td><td>変数[位置]</td><td>基本的にはtest、set/resetと同等ですが、範囲外の位置を指定した場合にエラーにならないことに注意する必要があります。</td></tr>\n",
+              "</tbody>\n",
+              "</table>"
+            ]
+          },
+          "metadata": {}
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# bitset 関数を使って書き直す\n",
+        "%%writefile temp.cpp\n",
+        "#include <bits/stdc++.h>\n",
+        "using namespace std;\n",
+        "\n",
+        "int main() {\n",
+        "    // {1, 3, 5} にフラグの立ったビット\n",
+        "    unsigned int bit = BIT_FLAG_1 | BIT_FLAG_3 | BIT_FLAG_5;\n",
+        "    cout << \"{1, 3, 5} = \" << bitset<8>(bit) << endl;\n",
+        "\n",
+        "    // ビット {1, 3, 5} について、3 番目のフラグが立っていること\n",
+        "    if (bit & BIT_FLAG_3) {\n",
+        "        cout << \"3 is in     \" << bitset<8>(bit) << endl;\n",
+        "    }\n",
+        "\n",
+        "    // ビット {1, 3, 5} について、0 番目のフラグが立っていないこと\n",
+        "    if (!(bit & BIT_FLAG_0)) {\n",
+        "        cout << \"0 is not in \" << bitset<8>(bit) << endl;\n",
+        "    }\n",
+        "\n",
+        "    // 新たなビット\n",
+        "    unsigned int bit2 = BIT_FLAG_0 | BIT_FLAG_3 | BIT_FLAG_4; // {0, 3, 4}\n",
+        "    cout << bitset<8>(bit) << \" AND \" << bitset<8>(bit2) << \" = \" << bitset<8>(bit & bit2) << endl; // {1, 3, 5} AND {0, 3, 4} = {3}\n",
+        "    cout << bitset<8>(bit) << \" OR  \" << bitset<8>(bit2) << \" = \" << bitset<8>(bit | bit2) << endl; // {1, 3, 5} OR {0, 3, 4} = {0, 1, 3, 4, 5}\n",
+        "\n",
+        "    // bit に 6 番目のフラグを立てる\n",
+        "    cout << \"before: \" << bitset<8>(bit) << endl;\n",
+        "    bit |= BIT_FLAG_6;\n",
+        "    cout << \"after : \" << bitset<8>(bit) << \" (6 included)\" << endl;\n",
+        "\n",
+        "    // bit2 から 3 番目のフラグを消す\n",
+        "    cout << \"before: \" << bitset<8>(bit2) << endl;\n",
+        "    bit2 &= ~BIT_FLAG_3;\n",
+        "    cout << \"after : \" << bitset<8>(bit2) << \" (3 excluded)\" << endl;\n",
+        "\n",
+        "    return 0;\n",
+        "}"
+      ],
+      "metadata": {
+        "id": "fC1Uv63m2AjB"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "XpYKzrAN2CQl"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
         "{1, 3, 5} = 00101010\n",
         "3 is in     00101010\n",
         "0 is not in 00101010\n",
@@ -1216,7 +1489,7 @@
         "1"
       ],
       "metadata": {
-        "id": "jxoIkc7UcsNf"
+        "id": "H7o7SSXf1ohx"
       },
       "execution_count": null,
       "outputs": []
