--- a/cpp_bit.ipynb
+++ b/cpp_bit.ipynb
@@ -6,7 +6,7 @@
       "name": "cpp_bit.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNkM8LMjyyGe3iP9lWdTUBl",
+      "authorship_tag": "ABX9TyOiI+AVnow0AlEqNC2QJknI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -40,15 +40,6 @@
       ],
       "metadata": {
         "id": "uRUG0WU88C6h"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "# いまここ"
-      ],
-      "metadata": {
-        "id": "ji_R94ox8rhm"
       }
     },
     {
@@ -224,7 +215,7 @@
           "height": 208
         }
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -342,7 +333,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -365,7 +356,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -387,7 +378,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# bitset 関数を使って書き直そう\n",
+        "# bitset 関数\n",
         "%%html\n",
         "<table border=\"1\" style=\"width: 90%\">\n",
         "<thead>\n",
@@ -413,13 +404,13 @@
       ],
       "metadata": {
         "id": "sNJtOUVf1z6Q",
-        "outputId": "4f4e562c-163e-4648-cee8-8729043c5841",
+        "outputId": "cde58061-b014-421b-a804-7b7dbaa4e75b",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 493
+          "height": 545
         }
       },
-      "execution_count": 7,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "display_data",
@@ -464,75 +455,111 @@
         "using namespace std;\n",
         "\n",
         "int main() {\n",
+        "    bitset<8> bit;\n",
         "    // {1, 3, 5} にフラグの立ったビット\n",
-        "    unsigned int bit = BIT_FLAG_1 | BIT_FLAG_3 | BIT_FLAG_5;\n",
-        "    cout << \"{1, 3, 5} = \" << bitset<8>(bit) << endl;\n",
+        "    // bit.set(1);bit.set(3);bit.set(5);\n",
+        "    bit.set(1).set(3).set(5);\n",
+        "    cout << \"{1, 3, 5} = \" << bit << endl;\n",
         "\n",
         "    // ビット {1, 3, 5} について、3 番目のフラグが立っていること\n",
-        "    if (bit & BIT_FLAG_3) {\n",
+        "    if (bit.test(3)) {\n",
         "        cout << \"3 is in     \" << bitset<8>(bit) << endl;\n",
         "    }\n",
         "\n",
         "    // ビット {1, 3, 5} について、0 番目のフラグが立っていないこと\n",
-        "    if (!(bit & BIT_FLAG_0)) {\n",
+        "    if (!(bit.test(0))) {\n",
         "        cout << \"0 is not in \" << bitset<8>(bit) << endl;\n",
         "    }\n",
         "\n",
         "    // 新たなビット\n",
-        "    unsigned int bit2 = BIT_FLAG_0 | BIT_FLAG_3 | BIT_FLAG_4; // {0, 3, 4}\n",
-        "    cout << bitset<8>(bit) << \" AND \" << bitset<8>(bit2) << \" = \" << bitset<8>(bit & bit2) << endl; // {1, 3, 5} AND {0, 3, 4} = {3}\n",
-        "    cout << bitset<8>(bit) << \" OR  \" << bitset<8>(bit2) << \" = \" << bitset<8>(bit | bit2) << endl; // {1, 3, 5} OR {0, 3, 4} = {0, 1, 3, 4, 5}\n",
+        "    // unsigned int bit2 = BIT_FLAG_0 | BIT_FLAG_3 | BIT_FLAG_4; // {0, 3, 4}\n",
+        "    bitset<8> bit2;\n",
+        "    bit2.set(0).set(3).set(4); // {0, 3, 4}\n",
+        "    cout << (bit) << \" AND \" << (bit2) << \" = \" << (bit & bit2) << endl; // {1, 3, 5} AND {0, 3, 4} = {3}\n",
+        "    cout << (bit) << \" OR  \" << (bit2) << \" = \" << (bit | bit2) << endl; // {1, 3, 5} OR {0, 3, 4} = {0, 1, 3, 4, 5}\n",
         "\n",
         "    // bit に 6 番目のフラグを立てる\n",
-        "    cout << \"before: \" << bitset<8>(bit) << endl;\n",
-        "    bit |= BIT_FLAG_6;\n",
-        "    cout << \"after : \" << bitset<8>(bit) << \" (6 included)\" << endl;\n",
+        "    cout << \"before: \" << (bit) << endl;\n",
+        "    bit.set(6);\n",
+        "    cout << \"after : \" << (bit) << \" (6 included)\" << endl;\n",
         "\n",
         "    // bit2 から 3 番目のフラグを消す\n",
-        "    cout << \"before: \" << bitset<8>(bit2) << endl;\n",
-        "    bit2 &= ~BIT_FLAG_3;\n",
-        "    cout << \"after : \" << bitset<8>(bit2) << \" (3 excluded)\" << endl;\n",
-        "\n",
-        "    return 0;\n",
+        "    cout << \"before: \" << (bit2) << endl;\n",
+        "    bit2.reset(3);\n",
+        "    cout << \"after : \" << (bit2) << \" (3 excluded)\" << endl;\n",
         "}"
       ],
       "metadata": {
-        "id": "fC1Uv63m2AjB"
+        "id": "fC1Uv63m2AjB",
+        "outputId": "c495e40f-1eaa-49cd-93e5-b5aac464310b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
-        ""
+        "!g++ temp.cpp; ./a.out"
       ],
       "metadata": {
-        "id": "XpYKzrAN2CQl"
+        "id": "XpYKzrAN2CQl",
+        "outputId": "520d7dc3-6e47-4179-fc4b-f845ce663e00",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{1, 3, 5} = 00101010\n",
+            "3 is in     00101010\n",
+            "0 is not in 00101010\n",
+            "00101010 AND 00011001 = 00001000\n",
+            "00101010 OR  00011001 = 00111011\n",
+            "before: 00101010\n",
+            "after : 01101010 (6 included)\n",
+            "before: 00011001\n",
+            "after : 00010001 (3 excluded)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# いまここ"
+      ],
+      "metadata": {
+        "id": "hk1-8G6zEmDI"
+      }
     },
     {
       "cell_type": "code",
       "source": [
-        "\n",
-        "{1, 3, 5} = 00101010\n",
-        "3 is in     00101010\n",
-        "0 is not in 00101010\n",
-        "00101010 AND 00011001 = 00001000\n",
-        "00101010 OR  00011001 = 00111011\n",
-        "before: 00101010\n",
-        "after : 01101010 (6 included)\n",
-        "before: 00011001\n",
-        "after : 00010001 (3 excluded)\n",
-        "4. マスクビット\n",
-        "ビットの使い方として最も多いものの 1 つがマスクビットです。なじみの深いもので言えば、IPアドレスのマスクビットや割り込み制御のマスクビットなどが挙げられます。多種多様な場面で使用されるマスクビットですが、基本的なアイディアは共通で、\n",
+        "# 4. マスクビット\n",
+        "ビットの使い方として最も多いものの 1 つがマスクビットです。\n",
+        "なじみの深いもので言えば、IPアドレスのマスクビットや割り込み制御のマスクビットなどが挙げられます。\n",
+        "多種多様な場面で使用されるマスクビットですが、基本的なアイディアは共通で、\n",
         "\n",
         "複数のフラグをまとめて立てる\n",
         "複数のフラグをまとめて消す\n",
         "必要な情報だけを取り出すために、マスクした部分の情報のみを取り出す\n",
-        "といったものを効率良く実現するものです。現在のフラグ状態を表すビットを bit として、マスクビットを mask としたとき\n",
+        "といったものを効率良く実現するものです。現在のフラグ状態を表すビットを bit として、\n",
+        "マスクビットを mask としたとき\n",
         "\n",
         "やりたいこと\t実装\n",
         "mask で表された部分のフラグをまとめて立てる\tbit ｜= mask\n",
