Colaboratory を使用して作成しました

--- a/cpp_bit.ipynb
+++ b/cpp_bit.ipynb
@@ -6,7 +6,7 @@
       "name": "cpp_bit.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNtpBBH4N/tuP3f6sDMSEPm",
+      "authorship_tag": "ABX9TyMUY/ktl+45xoacpyubKYCe",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -754,15 +754,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "# いまここ"
-      ],
-      "metadata": {
-        "id": "K556wf4hMFG4"
-      }
-    },
-    {
       "cell_type": "code",
       "source": [
         "# bitset を使って書き直してみよう\n",
@@ -973,7 +964,7 @@
           "height": 342
         }
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1067,7 +1058,8 @@
     {
       "cell_type": "code",
       "source": [
-        "# bitset を使った場合は次のような表になると思われます\n"
+        "# bitset を使って bitset 関数を使った方が便利\n",
+        "# set, reset, test, flip, all, any, count が使える"
       ],
       "metadata": {
         "id": "xoCRxbPZtoP-"
@@ -1078,32 +1070,47 @@
     {
       "cell_type": "code",
       "source": [
+        "# 6. bit 全探索\n",
+        "# bit 全探索とは、nn 個の要素からなる集合 {0,1,…,n−10,1,…,n−1} の部分集合をすべて調べ上げる手法のことです。\n",
+        "# なお、ここでは、bit 全探索の方法と具体例を簡単に記していますが、より詳細な解説は以下の記事で行いました。\n",
+        "# 疑問点が残った場合には、ぜひ読んでもらえたらと思います。\n",
         "\n",
-        "6. bit 全探索\n",
-        "bit 全探索とは、nn 個の要素からなる集合 {0,1,…,n−10,1,…,n−1} の部分集合をすべて調べ上げる手法のことです。なお、ここでは、bit 全探索の方法と具体例を簡単に記していますが、より詳細な解説は以下の記事で行いました。疑問点が残った場合には、ぜひ読んでもらえたらと思います。\n",
+        "# さて、bit 全探索は、以下のように実施できます:\n",
         "\n",
-        "bit 全探索\n",
-        "さて、bit 全探索は、以下のように実施できます:\n",
+        "# int main() {\n",
+        "#     int n = 5;\n",
+        "#     // {0, 1, ..., n-1} の部分集合の全探索\n",
+        "#     for (int bit = 0; bit < (1<<n); ++bit){\n",
+        "#         /* bit で表される集合の処理を書く */\n",
+        "#     }\n",
+        "# }\n",
         "\n",
-        "#include <iostream>\n",
-        "#include <vector>\n",
-        "using namespace std;\n",
+        "# for (int tmp = 0; tmp < (1 << ビット数); tmp++) {\n",
+        "#   bitset<ビット数> s(tmp);\n",
+        "#   // (ビット列sに対する処理)\n",
+        "# }\n",
         "\n",
-        "int main() {\n",
-        "    int n = 5;\n",
-        "\n",
-        "    // {0, 1, ..., n-1} の部分集合の全探索\n",
-        "    for (int bit = 0; bit < (1<<n); ++bit)\n",
-        "    {\n",
-        "        /* bit で表される集合の処理を書く */\n",
-        "\n",
-        "    }\n",
-        "}\n",
-        "本当に出来ていることを確認してみましょう。\n",
-        "\n",
-        "#include <iostream>\n",
-        "#include <vector>\n",
-        "using namespace std;\n",
+        "# てなんか違うね。"
+      ],
+      "metadata": {
+        "id": "z1_dYZ0but-p"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# いまここ"
+      ],
+      "metadata": {
+        "id": "phiBD4_Q6tJj"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# bit 全探索実験\n",
         "\n",
         "int main() {\n",
         "    int n = 5;\n",
@@ -1231,10 +1238,6 @@
         "\n",
         "これは次のように実現できます:\n",
         "\n",
-        "#include <iostream>\n",
-        "#include <vector>\n",
-        "using namespace std;\n",
-        "\n",
         "int main() {\n",
         "    int n = 10;\n",
         "    int A = (1<<2) | (1<<3) | (1<<5) | (1<<7); // {A = {2, 3, 5, 7}\n",
@@ -1248,10 +1251,6 @@
         "    }\n",
         "}\n",
         "確かめてみましょう。\n",
-        "\n",
-        "#include <iostream>\n",
-        "#include <vector>\n",
-        "using namespace std;\n",
         "\n",
         "int main() {\n",
         "    int n = 10;\n",
@@ -1302,10 +1301,6 @@
         "8. next_combination\n",
         "今度は nn 個の要素の集合 {0,1,…,n−10,1,…,n−1} の部分集合のうち、要素数が KK のもののみを列挙する方法を考えます。これは以下のように実現できます (ただし、以下のコードは K=0K=0 のときには動作しないので、その場合は例外処理する必要があります):\n",
         "\n",
-        "#include <iostream>\n",
-        "#include <vector>\n",
-        "using namespace std;\n",
-        "\n",
         "/* next combination */\n",
         "int next_combination(int sub) {\n",
         "    int x = sub & -sub, y = sub + x;\n",
@@ -1323,10 +1318,6 @@
         "    }\n",
         "}\n",
         "確かめてみましょう。\n",
-        "\n",
-        "#include <iostream>\n",
-        "#include <vector>\n",
-        "using namespace std;\n",
         "\n",
         "/* next combination */\n",
         "int next_combination(int sub) {\n",
@@ -1933,7 +1924,7 @@
         "1"
       ],
       "metadata": {
-        "id": "z1_dYZ0but-p"
+        "id": "lIWueRWL6nts"
       },
       "execution_count": null,
       "outputs": []
