--- a/cpp_bit.ipynb
+++ b/cpp_bit.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "cpp_bit.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyM8uaR8VLEQNpHY+fOGHE4e",
+      "authorship_tag": "ABX9TyOw/mzAm8TOlLdkRoV5uSNB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1084,6 +1084,8 @@
         "#     }\n",
         "# }\n",
         "\n",
+        "# と言うことだが、bitset を使った場合のテンプレートはapg4bでは次のようになっていた。\n",
+        "\n",
         "# for (int tmp = 0; tmp < (1 << ビット数); tmp++) {\n",
         "#   bitset<ビット数> s(tmp);\n",
         "#   // (ビット列sに対する処理)\n",
@@ -1096,6 +1098,231 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 実験 全探索\n",
+        "%%writefile temp.cpp\n",
+        "#include <bits/stdc++.h>\n",
+        "using namespace std;\n",
+        " \n",
+        "int main() {\n",
+        "    int n = 3;\n",
+        "    cout << (1<<3) << endl;\n",
+        "    for (int bit = 0; bit < (1<<n); ++bit){\n",
+        "        cout << bit << endl;\n",
+        "    }\n",
+        "\n",
+        "    for (int tmp = 0; tmp < (1 << 3); tmp++) {\n",
+        "        bitset<3> s(tmp);\n",
+        "        cout << s << endl;\n",
+        "    }\n",
+        "}"
+      ],
+      "metadata": {
+        "id": "zeg9eW8qxf3X",
+        "outputId": "06c34e7b-f401-4abc-c5f2-7d394c93361c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Writing temp.cpp\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!g++ temp.cpp; ./a.out"
+      ],
+      "metadata": {
+        "id": "koxJIhdIxums",
+        "outputId": "41c839f0-830c-480c-f018-a63f4abff332",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "8\n",
+            "0\n",
+            "1\n",
+            "2\n",
+            "3\n",
+            "4\n",
+            "5\n",
+            "6\n",
+            "7\n",
+            "000\n",
+            "001\n",
+            "010\n",
+            "011\n",
+            "100\n",
+            "101\n",
+            "110\n",
+            "111\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 問題 bitset を数字で表せ\n",
+        "# 実験 全探索\n",
+        "%%writefile temp.cpp\n",
+        "#include <bits/stdc++.h>\n",
+        "using namespace std;\n",
+        " \n",
+        "int main() {\n",
+        "    for (int tmp = 0; tmp < (1 << 3); tmp++) {\n",
+        "        bitset<3> s(tmp);\n",
+        "        cout << s.to_ullong() << endl;\n",
+        "    }\n",
+        "}"
+      ],
+      "metadata": {
+        "id": "s7wMQy91y5RC",
+        "outputId": "47b77889-665c-47b2-d229-c28f60ab8e16",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!g++ temp.cpp; ./a.out"
+      ],
+      "metadata": {
+        "id": "GQ30Tkz9zLM0",
+        "outputId": "1f60b828-ed14-4d25-ee94-232abc5163dc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0\n",
+            "1\n",
+            "2\n",
+            "3\n",
+            "4\n",
+            "5\n",
+            "6\n",
+            "7\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 問題 bitset を数字で表せ その2\n",
+        "# 実験 全探索\n",
+        "%%writefile temp.cpp\n",
+        "#include <bits/stdc++.h>\n",
+        "using namespace std;\n",
+        "\n",
+        "vector<int> toNum(bitset<3> bs) {\n",
+        "    vector<int> vec;\n",
+        "    for (int i = 0; i < bs.size(); i++){\n",
+        "        if(bs.test(i)) vec.push_back(i);\n",
+        "    }\n",
+        "    return vec;\n",
+        "}\n",
+        "\n",
+        "void vecout(vector<int> vec){\n",
+        "    cout << \"{\";\n",
+        "    bool isFirst = true;\n",
+        "    for (auto item : vec){\n",
+        "        if(!isFirst) cout << \", \";\n",
+        "        cout << item;\n",
+        "        isFirst = false;\n",
+        "    };\n",
+        "    cout << \"}\" << endl;\n",
+        "}\n",
+        "\n",
+        "int main() {\n",
+        "    for (int tmp = 0; tmp < (1 << 3); tmp++) {\n",
+        "        bitset<3> s(tmp);\n",
+        "        vecout(toNum(s));\n",
+        "    }\n",
+        "}"
+      ],
+      "metadata": {
+        "id": "VGY4lRwezPIY",
+        "outputId": "cf2e0b35-ed2c-42cb-907f-8364bb888a78",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!g++ temp.cpp; ./a.out"
+      ],
+      "metadata": {
+        "id": "pkRu7yRK03Py",
+        "outputId": "ce6a229b-3fb0-48c6-dd1f-76f351ac8981",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{}\n",
+            "{0}\n",
+            "{1}\n",
+            "{0, 1}\n",
+            "{2}\n",
+            "{0, 2}\n",
+            "{1, 2}\n",
+            "{0, 1, 2}\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1147,7 +1374,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1207,7 +1434,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
